<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="1dp"
        android:onClick="onClickDecimal"
        android:text="@string/decimal"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickTimes"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickMinus"
        android:text="@string/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:onClick="onClick9"
        android:text="@string/nine"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:onClick="onClick7"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:onClick="onClick6"
        android:text="@string/six"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:onClick="onClick5"
        android:text="@string/five"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="66dp"
        android:clickable="false"
        android:text="@string/calculator"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/calculatorView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calculatorView"
        android:layout_width="243dp"
        android:layout_height="35dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#CAC9C9"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:onClick="onClick1"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatorView" />

    <Button
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:onClick="onClick2"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/calculatorView" />

    <Button
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:onClick="onClick3"
        android:text="@string/three"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/calculatorView" />

    <Button
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:onClick="onClick4"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:onClick="onClick8"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickPlus"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/calculatorView" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickDivide"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick0"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintStart_toEndOf="@+id/decimal"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickClear"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/fraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="142dp"
        android:onClick="onClickFraction"
        android:text="@string/fraction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decimal" />

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="142dp"
        android:onClick="onClickEquals"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fraction"
        app:layout_constraintTop_toBottomOf="@+id/divide" />
</androidx.constraintlayout.widget.ConstraintLayout>